--- a/primus/src/main/resources/br/com/primus/primus/ExibicaoAtividades.fxml
+++ b/primus/src/main/resources/br/com/primus/primus/ExibicaoAtividades.fxml
@@ -8,17 +8,18 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ExibicaoAtividadesController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.primus.primus.ExibicaoAtividadesController">
    <children>
       <Text fill="#f8f5f5" layoutX="63.0" layoutY="82.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Lista de Atividades:" underline="true" wrappingWidth="162.6357421875">
          <font>
             <Font size="19.0" />
          </font>
       </Text>
-      <TableView fx:id="tabelaAtividades" layoutX="108.0" layoutY="117.0" prefHeight="189.0" prefWidth="385.0">
+      <TableView fx:id="tabelaAtividades" layoutX="67.0" layoutY="121.0" prefHeight="189.0" prefWidth="458.0">
         <columns>
           <TableColumn fx:id="idColumn" prefWidth="75.0" text="ID" />
-          <TableColumn prefWidth="308.0" text="Atividades" />
+          <TableColumn fx:id="atividadeColumn" prefWidth="241.0" text="Atividades" />
+            <TableColumn fx:id="responsavelColumn" prefWidth="142.0" text="Responsáveis" />
         </columns>
       </TableView>
       <Button fx:id="deletarAtividade" layoutX="178.0" layoutY="347.0" mnemonicParsing="false" onAction="#deletarAtividade" text="Deletar Atividade" />
